syntax = 'proto3';

message Chat {
    Connect connect = 1;
    ConnAck conn_ack = 2;
    Disconnect disconnect = 3;
    DisconnectAck disconnect_ack = 4;
    Ping ping = 5;
    Pong pong = 6;
    Send send = 7;
    SendAck send_ack = 8;
}
message Connect {
    string uid = 1;
    string password = 2;
}

message ConnAck {
    bool success = 1;
    string message = 2;
}

message Disconnect {
    string reason = 1;
}

message DisconnectAck {
    bool success = 1;
    string message = 2;
}

message Ping {
}

message Pong {
}

message Send {
   int64 seq_id = 1;
   bytes payload = 2;
}

message SendAck {
    int64 seq_id = 1;
    bool success = 2;
    bytes detail = 3;
}
